[package]
name = "vulkano_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vulkano = { version = "0.29.0", features = ["nalgebra"] }
vulkano-shaders = { version = "0.29.0" }
image = "0.24.0"
winit = "0.26.0"
vulkano-win = { version = "0.29.0" }
rand = "0.8.5"
bytemuck = "1.8.0"
nalgebra = { version = "0.31", features = ["bytemuck"]}